--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -27,6 +27,8 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile("junit:junit")
+//    testCompile("junit:junit")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+//    compile("org.springframework.boot:spring-boot-starter-test")
 }
 
