--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -30,5 +30,6 @@ dependencies {
 //    testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 //    compile("org.springframework.boot:spring-boot-starter-test")
+    compile("org.springframework.boot.:spring-boot-starter-actuator")
 }
 
